force-app/main/default/objects/Outage__c/Outage__c.object-meta.xml
<CustomObject>
    <description>Network outage (Störung), region-scoped. Non-personal network data.</description>
    <label>Outage</label>
    <pluralLabel>Outages</pluralLabel>
    <nameField>
        <displayFormat>OUT-{000000}</displayFormat>
        <label>Outage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>