force-app/main/default/objects/Outage__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Text</type>
    <length>255</length>
</CustomField>