force-app/main/default/objects/Outage__c/fields/End__c.field-meta.xml
<CustomField>
  <fullName>End__c</fullName>
  <label>End</label>
  <type>DateTime</type>
</CustomField>