force-app/main/default/objects/Outage__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Text</type>
    <length>120</length>
    <description>Region / postcode area affected.</description>
</CustomField>