force-app/main/default/objects/Outage__c/fields/Start__c.field-meta.xml
<CustomField>
  <fullName>Start__c</fullName>
  <label>Start</label>
  <type>DateTime</type>
</CustomField>